fix overflow about

--- a/pages/about/styles.scss
+++ b/pages/about/styles.scss
@@ -13,12 +13,14 @@
     width: 100%;
     height: 600px;
 
-    padding-left: 140px;
-
     background: #000000;
   }
 
   &__first-section-slogan {
+    width: 100%;
+
+    padding-left: 140px;
+
     font-family: "Montserrat";
     font-style: normal;
     font-weight: 700;
@@ -35,6 +37,8 @@
     display: flex;
     flex-direction: column;
 
+    width: 100%;
+    
     padding-left: 800px;
   }
 
